Adding logging to request level
