# api/swagger/swagger.yaml
@@ -42,6 +42,7 @@ paths:
         type: string
         in: path
         required: true
+
     get:
       tags:
         - Get
@@ -91,6 +92,7 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/error"
+
     post:
       tags:
         - Add
@@ -127,6 +129,7 @@ paths:
         type: string
         required: true
         in: path
+
     get:
       tags:
         - Get
@@ -146,6 +149,7 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/error"
+
     delete:
       tags:
         - Delete
@@ -160,6 +164,7 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/error"
+
     post:
       tags:
         - Add
@@ -177,6 +182,7 @@ paths:
 
   /orbitdb:
     x-swagger-router-controller: database
+
     post:
       parameters:
         - name: type
@@ -208,6 +214,16 @@ paths:
       operationId: create
       responses:
         201:
+          description: Success
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/error"
+
+    get:
+      operationId: getStoress
+      responses:
+        200:
           description: Success
         default:
           description: Error
